# GeometricHashing

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  Makefile  README.md
doc/: Doxyfile
src/: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  ContainerChunks.h  Cube.h  Cubeset.cpp  Cubeset.h  CustomHashGeneral.h  DiagonalMatchesFilter.cpp  DiagonalMatchesFilter.h  DisambiguateSTLContainer.h  ExtractSeeds.cpp  ExtractSeeds.h  FastaCollection.h  FastaRepresentation.cpp  FastaRepresentation.h  GeometricHashing.h  IdentifierMapping.h  JsonStream.h  KmerOccurrence.h  Link.h  Linkset.cpp  Linkset.h  LinksetOutput.h  MemoryMonitor.cpp  MemoryMonitor.h  Output.h  ParallelProgressBarHandler.h  ParallelizationUtils.h  ProgressBar.h  ReferenceSeedMap.h  ReverseComplement.h  SeedFinder.h  SeedKmerMap.h  SeedMap.h  SeedMapContiguous.cpp  SeedMapContiguous.h  SeedMapGeneral.cpp  SeedMapGeneral.h  (+11 more)
src/test/: CMakeLists.txt  ConfigurationGenerator.h  GeometricHashingTestdata.h  LoadTestdata.cpp  LoadTestdata.h  WriteTestdata.h  fillDiagonalMatchesFilterTestdata.h  fillLinksetTestdata.h  fillSeedMapContiguousTestdata.h  fillSeedMapSpacedTestdata.h  stringHash.cpp  testConfiguration.cpp  testContainerChunks.cpp  testCubeRelated.cpp  testDiagonalMatchesFilter.cpp  testDisambiguateSTLContainer.cpp  testFastaRepresentation.cpp  testIdentifierMapping.cpp  testJsonStream.cpp  testKmerOccurrence.cpp  testLink.cpp  testLinkRelated.cpp  testLinkset.cpp  testMain.cpp  testSeedFinder.cpp  testSeedKmerMap.cpp  testSeedMap.cpp  testSeedMapBase.cpp  testSeedMapContiguous.cpp  testSeedMapGeneral.cpp  testSeedMapSpaced.cpp  testSpacedSeedMask.cpp  testTwoBitKmer.cpp
testdata/: generateTestcode.pl  hetGla2_orthologs.fa  hg38_orthologs.fa  macFas5_orthologs.fa  mm10_orthologs.fa  singleFasta.fa
testdata/geometricHashing/: singleFa.fa  species1.fasta  species2.fasta  species3.fasta  species4.fasta  species5.fasta
testdata/metagraph/: expectedCubeScores.py  expectedCubes.py  expectedLinks.py  expectedRegionTuples.py  expectedSeeds.py  generateAllTestdata.py  generateTestdata.py
testdata/pGH/: hg38.fa  mm10.fa
testdata/yass/: cds.json  command.txt  hg38.fa  matches0.json  mm10.fa  orthologPairs.json
